# micropython-smarthome

./: .codespellrc  .coveragerc  .env  .gitignore  .gitlab-ci.yml  .pylintrc  Api.py  Config.py  Group.py  HTTP-Api.py  Pipfile  README.md  SoftwareTimer.py  api_client.py  boot.py  boot.py.template  config_generator.py  desktop-integration.py  desktop-integration.service  humidifier-test.py  nodes.json  pir-lights.py  pir-tester.py  pir-tplink.py  provision.py  pyproject.toml  remote_control.py  run_all_tests.sh  run_cli_tests.py  runtests.sh  setup.py  testing.py  thermostat.py  time-based-lights.py  util.py
CLI/: api_client.py  cli_config_manager.py  config_generator.py  config_prompt_validators.py  config_rule_prompts.py  convert-ir-codes.py  convert_ir_codes.py  entrypoint.py  mem_test.py  normalize_ir_code_timings.py  provision.py  readme.md  readme_advanced.md  setup.py  smarthome_cli.py
PIR-tester/: boot.py
bash_completion/: _api_client  _provision
config/: another.json  bedroom-ir-blaster.json  bedroom-tv.json  bedroom.json  downstairs-bathroom-relay.json  downstairs-bathroom.json  downstairs-heater.json  (+13 more)
util/: Webrepl.py  api_endpoints.py  api_helper_functions.py  get_modules.py  helper_functions.py  instance_validators.py  provision_tools.py  pyproject.toml  setup.py  unit-test-config.json  validate_config.py  validation_constants.py
util/metadata/devices/: ApiTarget.json  DumbRelay.json  HttpGet.json  LedStrip.json  Mosfet.json  Relay.json  TasmotaRelay.json  TplinkBulb.json  TplinkDimmer.json
util/metadata/sensors/: DesktopTrigger.json  Dht22.json  Ld2410.json  LoadCell.json  MotionSensor.json  Si7021.json
(+748 files in other folders)
